@@ -1,4 +1,5 @@
 0.2.6
+Removed redundant 'Restore Session With Bookmarks' bookmarks are now reloaded by default.
 All tabs updated at once when restoring session.
 Jumping to bookmark now also places cursor at bookmark.
 Plugins can now use restore session routine.
